--- a/Flippy/Views/OrderPage.xaml
+++ b/Flippy/Views/OrderPage.xaml
@@ -29,10 +29,7 @@
                                 Text="Delivered on Feb 12, 2021" />
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
-                    <BoxView
-                        BackgroundColor="{StaticResource DarkBlue}"
-                        HeightRequest="1"
-                        Opacity="0.1" />
+                    <BoxView BackgroundColor="{StaticResource LightGrey}" HeightRequest="1" />
                     <Grid Padding="10,12,16,14" ColumnDefinitions="*, Auto">
                         <HorizontalStackLayout Spacing="5">
                             <Image Source="star_full_icon.svg" />
@@ -47,7 +44,51 @@
                             Style="{StaticResource BlueLabel}"
                             Text="Write a Review">
                             <Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </Grid>
+                </VerticalStackLayout>
+            </Border>
+            <Border StrokeShape="RoundRectangle 6">
+                <VerticalStackLayout>
+                    <VerticalStackLayout Padding="10">
+                        <Label
+                            FontSize="10"
+                            Style="{StaticResource GreyLabel}"
+                            Text="Grocery Items" />
+                        <Label
+                            Margin="0,9,0,7"
+                            FontSize="14"
+                            Style="{StaticResource DarkLabel}"
+                            Text="William P. Martinez" />
+                        <HorizontalStackLayout Margin="0,0,0,6" Spacing="6">
+                            <Ellipse
+                                Fill="{StaticResource LightGreen}"
+                                HeightRequest="10"
+                                WidthRequest="10" />
+                            <Label
+                                FontSize="12"
+                                Style="{StaticResource GreyLabel}"
+                                Text="Delivered on Feb 12, 2021" />
+                        </HorizontalStackLayout>
+                    </VerticalStackLayout>
+                    <BoxView BackgroundColor="{StaticResource LightGrey}" HeightRequest="1" />
+                    <Grid Padding="10,12,16,14" ColumnDefinitions="*, Auto">
+                        <HorizontalStackLayout Spacing="5">
+                            <Image Source="star_full_icon.svg" />
+                            <Image Source="star_full_icon.svg" />
+                            <Image Source="star_full_icon.svg" />
+                            <Image Source="star_full_icon.svg" />
+                            <Image Source="star_empty_icon.svg" />
+                        </HorizontalStackLayout>
+                        <Label
+                            Grid.Column="1"
+                            FontSize="10"
+                            Style="{StaticResource BlueLabel}"
+                            Text="Write a Review">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
                             </Label.GestureRecognizers>
                         </Label>
                     </Grid>
@@ -77,9 +118,8 @@
                         </HorizontalStackLayout>
                     </VerticalStackLayout>
                     <BoxView
-                        BackgroundColor="{StaticResource DarkBlue}"
-                        HeightRequest="1"
-                        Opacity="0.1" />
+                        BackgroundColor="{StaticResource LightGrey}"
+                        HeightRequest="1" />
                     <Grid Padding="10,12,16,14" ColumnDefinitions="*, Auto">
                         <HorizontalStackLayout Spacing="5">
                             <Image Source="star_full_icon.svg" />
@@ -94,54 +134,7 @@
                             Style="{StaticResource BlueLabel}"
                             Text="Write a Review">
                             <Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
-                            </Label.GestureRecognizers>
-                        </Label>
-                    </Grid>
-                </VerticalStackLayout>
-            </Border>
-            <Border StrokeShape="RoundRectangle 6">
-                <VerticalStackLayout>
-                    <VerticalStackLayout Padding="10">
-                        <Label
-                            FontSize="10"
-                            Style="{StaticResource GreyLabel}"
-                            Text="Grocery Items" />
-                        <Label
-                            Margin="0,9,0,7"
-                            FontSize="14"
-                            Style="{StaticResource DarkLabel}"
-                            Text="William P. Martinez" />
-                        <HorizontalStackLayout Margin="0,0,0,6" Spacing="6">
-                            <Ellipse
-                                Fill="{StaticResource LightGreen}"
-                                HeightRequest="10"
-                                WidthRequest="10" />
-                            <Label
-                                FontSize="12"
-                                Style="{StaticResource GreyLabel}"
-                                Text="Delivered on Feb 12, 2021" />
-                        </HorizontalStackLayout>
-                    </VerticalStackLayout>
-                    <BoxView
-                        BackgroundColor="{StaticResource DarkBlue}"
-                        HeightRequest="1"
-                        Opacity="0.1" />
-                    <Grid Padding="10,12,16,14" ColumnDefinitions="*, Auto">
-                        <HorizontalStackLayout Spacing="5">
-                            <Image Source="star_full_icon.svg" />
-                            <Image Source="star_full_icon.svg" />
-                            <Image Source="star_full_icon.svg" />
-                            <Image Source="star_full_icon.svg" />
-                            <Image Source="star_empty_icon.svg" />
-                        </HorizontalStackLayout>
-                        <Label
-                            Grid.Column="1"
-                            FontSize="10"
-                            Style="{StaticResource BlueLabel}"
-                            Text="Write a Review">
-                            <Label.GestureRecognizers>
-                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
                             </Label.GestureRecognizers>
                         </Label>
                     </Grid>
