--- a/Flippy/Views/HomePage.xaml
+++ b/Flippy/Views/HomePage.xaml
@@ -19,7 +19,7 @@
     </Shell.TitleView>
 
     <ContentPage.ToolbarItems>
-        <ToolbarItem IconImageSource="bell_icon.svg" />
+        <ToolbarItem IconImageSource="bell_icon.svg" Clicked="ToolbarItem_Clicked" />
     </ContentPage.ToolbarItems>
     <ScrollView>
         <VerticalStackLayout Padding="15,15,15,20" Spacing="15">
