added product detail page

--- a/Flippy/Resources/Styles/Styles.xaml
+++ b/Flippy/Resources/Styles/Styles.xaml
@@ -55,6 +55,7 @@
         BasedOn="{StaticResource BaseButton}"
         TargetType="Button">
         <Setter Property="BackgroundColor" Value="White" />
+        <Setter Property="BorderColor" Value="{StaticResource DeepBlue}" />
         <Setter Property="TextColor" Value="{StaticResource DarkBlue}" />
     </Style>
 
